--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -164,12 +164,12 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
         with:
           src_to_dst: |
-            (git@github.com:github/docs.git ---> git@gitee.com:kuxiade/github-docs.git)
-            (git@github.com:Yikun/hub-mirror-action.git ---> git@gitee.com:kuxiade/hub-mirror-action.git)
-            (git@github.com:microsoft/vscode-dev-containers.git ---> git@gitee.com:kuxiade/vscode-dev-containers.git)
-            (git@github.com:microsoft/vvvvvvvvvvvvscode-dev-containers.git ---> git@gitee.com:kuxiade/vscode-dev-containers.git)
-            (git@gits.git ---> git@gitee.com:kuxiade/vscode-dev-containers.git)
-            (git@github.com:hlissner/doom-emacs.git ---> git@gitee.com:kuxiade/doom-emacs.git)
+            git@github.com:github/docs.git ---> git@gitee.com:kuxiade/github-docs.git
+            git@github.com:Yikun/hub-mirror-action.git ---> git@gitee.com:kuxiade/hub-mirror-action.git
+            git@github.com:microsoft/vscode-dev-containers.git ---> git@gitee.com:kuxiade/vscode-dev-containers.git
+            git@github.com:microsoft/vvvvvvvvvvvvscode-dev-containers.git ---> git@gitee.com:kuxiade/vscode-dev-containers.git
+            git@gits.git ---> git@gitee.com:kuxiade/vscode-dev-containers.git
+            git@github.com:hlissner/doom-emacs.git ---> git@gitee.com:kuxiade/doom-emacs.git
           # # 用于目的端上传代码的SSH key，用于从gituhb虚拟机上传代码到目的端仓库。
           # ssh_private_key: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
           # 需要被同步的源端仓库
