--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,10 +18,10 @@ on:
     #   - 'docs/**'
     #   - 'README.md'
   # 定时任务触发
-  schedule:
-    # 每天北京时间9点跑
-    # Runs at 04:00 UTC (12:00 AM Beijing) every day
-    - cron:  '0 */2 * * *'
+  # schedule:
+  #   # 每天北京时间9点跑
+  #   # Runs at 04:00 UTC (12:00 AM Beijing) every day
+  #   - cron:  '0 */2 * * *'
 
 jobs:
   run:
