--- a/.github/workflows/github-to-gitee.yml
+++ b/.github/workflows/github-to-gitee.yml
@@ -22,7 +22,7 @@ on:
     # Runs at 04:00 UTC (12:00 AM Beijing) every day
     #- cron:  '0 4 * * *'
     # 每隔4小时执行一次
-    - cron:  '0 */4 * * *'
+    #- cron:  '0 */4 * * *'
 
 jobs:
   job1:
