--- a/.github/workflows/github-to-gitee.yml
+++ b/.github/workflows/github-to-gitee.yml
@@ -25,7 +25,7 @@ on:
 
 jobs:
   job1:
-    name: Run test
+    name: Sync from GitHub to Gitee
     runs-on: ubuntu-latest
     # 在 GitHub 自动取消运行之前可让作业运行的最大分钟数。 默认值：360
     timeout-minutes: 60
@@ -88,7 +88,7 @@ jobs:
           echo "ls -la" ${{ github.workspace }}/${{ github.job }}-cache
           ls -la ${{ github.workspace }}/${{ github.job }}-cache || { echo "warning!";exit 0; }
 
-      - name: Test dev
+      - name: Sync from GitHub to Gitee
         # 终止进程之前运行该步骤的最大分钟数。
         timeout-minutes: 30
         uses: ./
