--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,9 @@ inputs:
   cache_path:
     description: "The path to cache the source repos code."
     default: '/github/workspace/repo-mirror-cache'
+  time_out:
+    description: "The duration of the timeout command."
+    default: '3m'
   errexit_flag:
     description: "Exit immediately if a simple command exits with a non-zero status, must be true or false. (use 'set -e', equivalent to 'set -o errexit')"
     default: true
@@ -40,5 +43,6 @@ runs:
     - ${{ inputs.dst_repo_branch }}
     - ${{ inputs.dst_repo_tag }}
     - ${{ inputs.cache_path }}
+    - ${{ inputs.time_out }}
     - ${{ inputs.errexit_flag }}
     - ${{ inputs.xtrace_debug }}
